// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render different variants 1`] = `ReactWrapper {}`;

exports[`Button should render different variants 2`] = `
<NextUI - Button
  animated={true}
  bordered={false}
  className=""
  clickable={true}
  disabled={false}
  flat={false}
  ghost={false}
  light={false}
  ripple={true}
>
  button
</NextUI - Button>
`;

exports[`Button should render empty button correctly 1`] = `
<NextUI - Button
  animated={true}
  bordered={false}
  className=""
  clickable={true}
  disabled={false}
  flat={false}
  ghost={false}
  light={false}
  ripple={true}
/>
`;
